refactor: 기존 requestProduct 로직 개선