@@ -11,40 +11,38 @@ import io.codef.api.error.CodefException;
 import org.apache.hc.client5.http.classic.methods.HttpPost;
 import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
 import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
+import org.apache.hc.core5.http.HttpStatus;
 import org.apache.hc.core5.http.io.entity.EntityUtils;
 import org.apache.hc.core5.http.io.entity.StringEntity;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
-import static org.apache.hc.client5.http.auth.StandardAuthScheme.BASIC;
-import static org.apache.hc.client5.http.auth.StandardAuthScheme.BEARER;
+import static io.codef.api.dto.EasyCodefRequest.*;
+import static io.codef.api.dto.EasyCodefResponse.DATA;
+import static io.codef.api.dto.EasyCodefResponse.RESULT;
 import static org.apache.hc.core5.http.HttpHeaders.AUTHORIZATION;
 
 final class EasyCodefConnector {
 
     static String issueToken(String codefOAuthToken) {
-        System.out.println("issue Token !!!\n\n");
-        final String BASIC_TOKEN_FORMAT = BASIC + " %s";
-        final String accessTokenParameter = "access_token";
-
         try (CloseableHttpClient httpClient = HttpClientBuilder.create().build()) {
             HttpPost httpPost = new HttpPost(CodefHost.CODEF_OAUTH_SERVER + CodefPath.ISSUE_TOKEN);
             httpPost.addHeader(AUTHORIZATION, String.format(BASIC_TOKEN_FORMAT, codefOAuthToken));
 
             return httpClient.execute(httpPost, response -> {
+                final String responseBody = EntityUtils.toString(response.getEntity());
+
                 switch (response.getCode()) {
                     case 200:
                         break;
                     case 401:
-                        throw CodefException.from(CodefError.OAUTH_UNAUTHORIZED);
-                    case 500:
+                        throw CodefException.of(CodefError.OAUTH_UNAUTHORIZED, responseBody);
                     default:
-                        throw CodefException.from(CodefError.OAUTH_INTERNAL_ERROR);
+                        throw CodefException.of(CodefError.OAUTH_INTERNAL_ERROR, responseBody);
                 }
 
-                String httpResponse = EntityUtils.toString(response.getEntity());
-
-                return JSON.parseObject(httpResponse).getString(accessTokenParameter);
+                return JSON.parseObject(responseBody).getString(ACCESS_TOKEN);
             });
         } catch (CodefException exception) {
             throw exception;
@@ -58,8 +56,6 @@ final class EasyCodefConnector {
             EasyCodefToken token,
             String requestUrl
     ) {
-        final String BEARER_TOKEN_FORMAT = BEARER + " %s";
-
         try (CloseableHttpClient httpClient = HttpClientBuilder.create().build()) {
             HttpPost httpPost = new HttpPost(requestUrl);
             httpPost.addHeader(AUTHORIZATION, String.format(BEARER_TOKEN_FORMAT, token.getAccessToken()));
@@ -68,19 +64,28 @@ final class EasyCodefConnector {
 
             return httpClient.execute(httpPost, response -> {
                 String httpResponse = EntityUtils.toString(response.getEntity());
-                String decodedResponse = URLDecoder.decode(httpResponse, "UTF-8");
+                String decodedResponse = URLDecoder.decode(httpResponse, StandardCharsets.UTF_8);
 
-                // TODO {"error":"invalid_token","error_description":"Cannot convert access token to JSON","code":"CF-09990","message":"OAUTH2.0 토큰 에러입니다. 메시지를 확인하세요."}
+                final int responseStatusCode = response.getCode();
+
+                if (responseStatusCode != HttpStatus.SC_OK) {
+                    throw CodefException.of(CodefError.CODEF_API_SERVER_ERROR, decodedResponse);
+                }
+
                 JSONObject jsonResponseObject = JSON.parseObject(decodedResponse);
 
-                EasyCodefResponse.Result resultResponse = jsonResponseObject.getJSONObject("result").to(EasyCodefResponse.Result.class);
-                Object dataResponse = jsonResponseObject.getJSONObject("data").to(Object.class);
+                EasyCodefResponse.Result resultResponse = jsonResponseObject.getJSONObject(RESULT)
+                        .to(EasyCodefResponse.Result.class);
+
+                Object dataResponse = jsonResponseObject.getJSONObject(DATA)
+                        .to(Object.class);
+
                 return new EasyCodefResponse(resultResponse, dataResponse);
             });
         } catch (CodefException exception) {
             throw exception;
         } catch (Exception exception) {
-            throw CodefException.of(CodefError.OAUTH_CONNECTION_ERROR, exception);
+            throw CodefException.of(CodefError.INTERNAL_SERVER_ERROR, exception);
         }
     }
 }
